# QPX

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt
docs/: index.md  installation.md  quickstart.md
docs/overrides/: main.html
docs/stylesheets/: extra.css
docs/user_guide/tabular/: api_reference.md  overview.md  preprocessing.md  statistics.md  summary.md  visuals.md  workflow.md
installation/: index.html
kpx/tabular/: __init__.py  statistics.py  summary.py  visuals.py
overrides/: main.html
qpx/tabular/: core.py  preprocessing.py  visuals.py
quickstart/: index.html
search/: search_index.json
stylesheets/: extra.css
tests/: conftest.py  test_preprocessing.py  test_statistics.py  test_summary.py  test_visuals.py
user_guide/tabular/api_reference/: index.html
user_guide/tabular/overview/: index.html
user_guide/tabular/preprocessing/: index.html
user_guide/tabular/statistics/: index.html
user_guide/tabular/summary/: index.html
user_guide/tabular/visuals/: index.html
user_guide/tabular/workflow/: index.html
